--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <!-- Section 1 -->
     <img class="image-gradient" src="gradient.png" alt="gradient">
     <div class="layer-blur"></div>
 
@@ -62,13 +63,27 @@
                 </div>
             </div>
         </main>
+        <!-- Section 2 -->
+        <section class="about-me">
+            <div class="about">
+
+
+            </div>
+
+
+        </section>
+
+
         <spline-viewer data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-offset="0"
             data-aos-duration="3000" class="robot"
             url="https://prod.spline.design/ZgMvKm9r5-gg7tsT/scene.splinecode"></spline-viewer>
-
-
-
     </div>
+
+
+
+
+
+
     <script type="module" src="https://unpkg.com/@splinetool/viewer@1.12.58/build/spline-viewer.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
