--- a/index.html
+++ b/index.html
@@ -11,72 +11,73 @@
 
 <body>
     <!-- Section 1 -->
-    <img class="image-gradient" src="gradient.png" alt="gradient">
-    <div class="layer-blur"></div>
+    <section class="section-1">
 
-    <div class="container">
-        <header>
-            <h2 data-aos="fade-down" data-aos-duration="1500" class="logo">Portfolio</h2>
+        <img class="image-gradient" src="gradient.png" alt="gradient">
+        <div class="layer-blur"></div>
 
-            <nav>
-                <a data-aos="fade-down" data-aos-duration="1500" href="#">Home</a>
-                <a data-aos="fade-down" data-aos-duration="2000" href="#">Skills</a>
-                <a data-aos="fade-down" data-aos-duration="2500" href="#">About</a>
-                <a data-aos="fade-down" data-aos-duration="3000" href="#">Contact</a>
-            </nav>
-            <button data-aos="fade-down" data-aos-duration="1500" class="btn-contact">Know More</button>
-        </header>
+        <div class="container">
+            <header>
+                <h2 data-aos="fade-down" data-aos-duration="1500" class="logo">Portfolio</h2>
+
+                <nav>
+                    <a data-aos="fade-down" data-aos-duration="1500" href="#">Home</a>
+                    <a data-aos="fade-down" data-aos-duration="2000" href="#">Skills</a>
+                    <a data-aos="fade-down" data-aos-duration="2500" href="#">About</a>
+                    <a data-aos="fade-down" data-aos-duration="3000" href="#">Contact</a>
+                </nav>
+                <button data-aos="fade-down" data-aos-duration="1500" class="btn-contact">Know More</button>
+            </header>
 
 
 
-        <main>
-            <div data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-offset="0"
-                data-aos-duration="1500" class="content">
-                <div class="tag-box">
-                    <div class="tag">Welcome &wedbar;</div>
-                </div>
-                <!-- <h1 data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-offset="0" -->
-                <!-- data-aos-duration="2000">I am <br> Rishav</h1> -->
+            <main>
                 <div data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-offset="0"
-                    data-aos-duration="1500" class="outer-headings">
-                    <h1>
-                        I am,
-                        <div class="inner-headings">
-                            <span>
-                                UI/UX Designer <br />
-                                Front-End Developer <br />
-                                Back-End Developer <br />
-                                Full-Stack Developer <br />
-                            </span>
-                        </div>
-                    </h1>
+                    data-aos-duration="1500" class="content">
+                    <div class="tag-box">
+                        <div class="tag">Welcome &wedbar;</div>
+                    </div>
+                    <!-- <h1 data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-offset="0" -->
+                    <!-- data-aos-duration="2000">I am <br> Rishav</h1> -->
+                    <div data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-offset="0"
+                        data-aos-duration="1500" class="outer-headings">
+                        <h1>
+                            I am,
+                            <div class="inner-headings">
+                                <span>
+                                    UI/UX Designer <br />
+                                    Front-End Developer <br />
+                                    Back-End Developer <br />
+                                    Full-Stack Developer <br />
+                                </span>
+                            </div>
+                        </h1>
+                    </div>
+                    <p data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-offset="0"
+                        data-aos-duration="2500" class="description">Engineering my future through disciplined
+                        learning,Web
+                        Devlopment,and rentless
+                        problem solving
+                    </p>
+                    <div data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-offset="0"
+                        data-aos-duration="3000" class="buttons">
+                        <a href="#" class="btn-about">About Me </a>
+                        <a href="#" class="btn-cv">Download CV </a>
+                    </div>
                 </div>
-                <p data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-offset="0"
-                    data-aos-duration="2500" class="description">Engineering my future through disciplined learning,Web
-                    Devlopment,and rentless
-                    problem solving
-                </p>
-                <div data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-offset="0"
-                    data-aos-duration="3000" class="buttons">
-                    <a href="#" class="btn-about">About Me </a>
-                    <a href="#" class="btn-cv">Download CV </a>
-                </div>
-            </div>
-        </main>
-        <!-- Section 2 -->
-        <section class="about-me">
-            <div class="about">
+            </main>
+    </section>
+    <!-- Section 2 -->
+    <section class="about-me">
 
 
-            </div>
+
+    </section>
 
 
-        </section>
-
-
-        <spline-viewer data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-offset="0"
-            data-aos-duration="3000" class="robot"
-            url="https://prod.spline.design/ZgMvKm9r5-gg7tsT/scene.splinecode"></spline-viewer>
+    <spline-viewer data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-offset="0"
+        data-aos-duration="3000" class="robot"
+        url="https://prod.spline.design/ZgMvKm9r5-gg7tsT/scene.splinecode"></spline-viewer>
     </div>
 
 
