Added about section

--- a/index.html
+++ b/index.html
@@ -68,18 +68,31 @@
             </main>
     </section>
     <!-- Section 2 -->
-    <section class="about-me">
+    <section class="about">
+        <div class="about-me">
+            <h2 class="head-about">About Me</h2>
+            <div class="about-content">
+                <img class="about-me-img" src="img.png" alt="about-me-img">
+                <p class="about-para">I am a B.Tech student focused on building strong fundamentals in backend
+                    development and data
+                    structures. I approach technology the same way I approach chess strategically, patiently, and with
+                    long-term thinking. Rather than chasing trends, I prioritize mastering core concepts, writing clean
+                    logic, and building scalable systems. My goal is not just to code, but to understand how things work
+                    under the hood and continuously evolve as an engineer.</p>
 
+            </div>
+        </div>
 
 
     </section>
+    <!-- Section-3 -->
+
 
 
     <spline-viewer data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-offset="0"
         data-aos-duration="3000" class="robot"
         url="https://prod.spline.design/ZgMvKm9r5-gg7tsT/scene.splinecode"></spline-viewer>
     </div>
-
 
 
 
